<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group
        android:id="@+id/category_groups"
        android:checkableBehavior="single">
        <item
            android:id="@+id/home"
            android:icon="@mipmap/ic_launcher"
            android:title="@string/home"></item>
        <item
            android:id="@+id/membership"
            android:icon="@mipmap/ic_launcher"
            android:title="@string/membership"
            android:visible="false"></item>
        <item
            android:id="@+id/about_us"
            android:icon="@mipmap/ic_launcher"
            android:title="@string/about_us"
            android:visible="false"></item>
        <item
            android:id="@+id/contact_us"
            android:icon="@mipmap/ic_launcher"
            android:title="@string/contact_us"></item>

    </group>
    <group
        android:id="@+id/contact_group"
        android:checkableBehavior="single">

        <item
            android:id="@+id/developer_by"
            android:icon="@mipmap/ic_launcher"
            android:title="@string/powered_by"></item>
    </group>

</menu>